simplified overflow fix

--- a/src/web/app/pages-monitoring/logs-page/logs-page.component.scss
+++ b/src/web/app/pages-monitoring/logs-page/logs-page.component.scss
@@ -32,7 +32,4 @@
   .col-1 {
     width: auto;
   }
-  .col-5 {
-    width: auto;
-  }
 }
